--- a/Education_Data_Preparation.ipynb
+++ b/Education_Data_Preparation.ipynb
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide a brief introduction to the purpose of this notebook."
+        "Exploring the impact of socioeconomic variables on test scores. This notebook involves prepping the data for analysis & modeling."
       ],
       "metadata": {
         "id": "26hIPGtBsi7g"
